fixed alignment & spacing issues- chamber homepage

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -96,34 +96,41 @@ footer p {
 /* Formatting */
 
 /* ----- general content ----- */
+#site { 
+    overflow-x: hidden; 
+}
 
-section {
-    margin-top: 75px;
+body {
+    margin: auto;
+    overflow-x: hidden;
 }
 
 .button {
-    width: 14rem;
-    height: 1.5rem;
+    width: 12rem;
+    height: 1.1rem;
     border-radius: 10px;
 
     text-align: center;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-top: 1.3rem;
+    padding-bottom: 1.3rem;
+    margin: 0;
 }
 
 .button a {
-    padding: 1.5rem;
+    padding: 1rem;
+    font-size: 0.9rem;
 }
 
 /* ----- header content ----- */
 
+
+
 header {
-    width: 100%;
-    margin: -3rem;
-    padding: 5rem;
+    width: auto;
+    padding: 3rem;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
 }
 
 h1 {
@@ -133,8 +140,9 @@ h1 {
 nav {
     display: flex;
     flex-direction: row;
-    position: absolute;
-    right: 145px;
+    margin-top: 1rem;
+    position: relative;
+    left: 6rem;
 }
 
 nav a {
@@ -147,19 +155,20 @@ nav a {
 
 #hero {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 20% 45% 35%;
-    margin: 0;
-    margin-top: 3rem;
-    margin-left: -2.5rem;
-    margin-bottom: -6.25rem;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 25% 50% 25%;
+
     width: 100%;
 }
 
 #hero img {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
+
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 20% 50%;
 }
 
 #hero h2, #hero p, #hero div {
@@ -171,8 +180,6 @@ nav a {
 
 #action-menu {
     padding: 3rem;
-    margin: -3rem;
-    margin-top: 100px;
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -250,8 +257,9 @@ footer .logo {
 /* dark mode button and effects */
 
 .switch {
-    position: absolute;
-    right: 40px;
+    position: fixed;
+    left: 40px;
+    bottom: 40px;
     display: inline-block;
     width: 75px;
     height: 34px;
