--- a/chamber/styles/normalize.css
+++ b/chamber/styles/normalize.css
@@ -1,9 +1,11 @@
+
 html {
     line-height: 1.25; 
 }
 
 body {
-    margin: 40px;
+    margin: 0;
+    padding: 0;
 }
 
 p {
